Fix navbar contrast

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     background:#f2f6e9;
 }
 .navbar {
-    background:#006269;
+    background:#011446;
 }
 
 .navbar-brand img{
